--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Galgeleg2.0</string>
+    <string name="app_name">S185105 Galgeleg 2.0</string>
+    <string name="home_screen">Galgeleg</string>
 </resources>
