--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,18 @@
 
     <!-- Highscore Activity -->
     <string name="highscore_title">Highscore</string>
+    <string name="listview">1.    Antal Forsøg: </string>
 
     <!-- Help Activity -->
     <string name="help_title">Hjælp</string>
+
+    <!-- Won Activity -->
+    <string name="won_title">Du har vundet!!</string>
+    <string name="tries">Antal forsøg: </string>
+    <string name="won_button">JAAAA!!</string>
+
+    <!-- Lost Activity -->
+    <string name="lost_title">Du har tabt!!</string>
+    <string name="word">Ordet var: </string>
+    <string name="lost_button">ØVV!!:(</string>
 </resources>
